--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -32,4 +32,12 @@
 \input{ch3.tex}
 \input{ch4.tex}
 
+\begin{thebibliography}{9}
+\addcontentsline{toc}{chapter}{Bibliografia}
+\bibitem{uno} M. Abramowitz, I. A. Stegun. ``§25.4, Integration'', \textit{Handbook of Mathematical Functions (with Formulas, Graphs, and Mathematical Tables)}, 1972
+\bibitem{due} I. Beichl, F. Sullivan. \textit{Computing in Science and Engineering}, 2000
+\bibitem{tre} M. Hjorth-Jensen. ``§9, Random walks and the Metropolis algorithm'', \textit{Computational Physics}, 2009
+\bibitem{quattro} Y. Saad. \textit{Iterative Methods for Sparse Linear Systems}, 2003
+\end{thebibliography} 
+
 \end{document}
