--- a/rel/ch1.tex
+++ b/rel/ch1.tex
@@ -12,7 +12,7 @@ dove gli $\ell_i(x)$ sono i polinomi di Lagrange così definiti
 $$\ell_i(x):= \prod_{\begin{smallmatrix}0\le j\le n\\ j\neq i\end{smallmatrix}} \frac{x-x_j}{x_i-x_j}$$$$\ell_i(x_j)=\delta_{ij}$$
 La formula di Newton-Cotes assume così la semplice forma di media dei valori $f(x_i)$ pesati sui coefficienti $w_i$ (indipendenti da $f$)
 $$\int_a^b f(x) \,dx \approx \sum_{i=0}^n w_i\, f(x_i)$$
-Si domostra che l'errore sulla stima di $f$ dato dall'interpolazione polinomiale è
+Si domostra che l'errore dell'interpolazione di $f$ con un polinomio è
 $$E(x)=\frac{1}{(n+1)!}f^{(n+1)}(\xi(x))\prod_{i=0}^n(x-x_i)$$
 per un certo $\xi\in[a,b]$ dipendente da $x$. Non avendo tuttavia alcuna informazione su come individuare il punto $\xi$ in genere si effettua solo una stima del limite superiore sull'errore $E(x)$ per $\xi$ tale che $f(\xi) = \underset{x\in[a,b]}{\max}f(x)$.
 
@@ -22,9 +22,45 @@ mentre al secondo ordine non è altro che la regola di Simpson:
 $$\int_a^b f(x) \,dx=\frac{b-a}{3}\left[f(a)+4f(\frac{a+b}{2})+f(b)\right] + \underbrace{\frac{1}{6}\int_a^b f'''(\xi(x))(x-a)(x-\frac{a+b}{2})(x-b)}_{E_2}$$
 
 \section{Quadrature Gaussiane}
-La regola di quadratura Gaussiana a $n$-punti è un metodo di integrazione numerica costruito in modo tale da fornire un risultato esatto per polinomi di grado inferiore a $2n$, attraverso una scelta appropriata di punti $x_i$ e pesi $w_i$, per $i=0,...,n$. Sul dominio di integrazione convenzionale $[-1,1]$ la regola è così formulata
+La regola di quadratura Gaussiana a $n$-punti è un metodo di integrazione numerica costruito in modo tale da fornire un risultato esatto per polinomi di grado inferiore a $2n$, attraverso una scelta appropriata di punti $x_i$ e pesi $w_i$, per $i=1,...,n$. Sul dominio di integrazione convenzionale $[-1,1]$ la regola è così formulata
 $$\int_{-1}^1 f(x)\,dx \approx \sum_{i=1}^n w_i f(x_i)$$
+L'accuratezza del risultato è tanto più grande quanto meglio $f$ è approssimata da un polinomio. Se tuttavia la funzione integranda può essere scritta come $f(x)=W(x)g(x)$, dove $g(x)$ è approssimativamente polinomiale e $W(x)$ è nota, allora esistono $w'_i$ tali che
+$$\int_{-1}^1 f(x)\,dx = \int_{-1}^1 W(x) g(x)\,dx \approx \sum_{i=1}^n w_i' g(x_i)$$
+$W(x)$ viene detta funzione peso, mentre i punti $x_i$ sono le radici di un polinomio appartenente alla classe dei polinomi ortogonali.
 
+Nel caso considerato $W(x)=1$ ed i polinomi associati sono i polinomi ortogonali di Legendre $P_n(x)$. Il peso $i$-esimo associato al nodo Gaussiano $x_i$ è dato da
+$$ w_i = \frac{2}{\left( 1-x_i^2 \right) [P'_n(x_i)]^2} \,\!$$
+Analogamente alle regole di Newton-Cotes, l'errore teorico del metodo della quadratura Gaussiana è
+$$E(x)=\frac{1}{n!}f^{(n)}(\xi(x))\prod_{i=1}^n(x-x_i)$$
+che può tuttavia essere ridotto a
+$$E(x)=\frac{1}{(2n)!}f^{(2n)}(\xi(x))\prod_{i=1}^n(x-x_i)^2$$
+semplicemente considerando due volte ogni punto di interpolazione $x_i$.
+
+Infine, se si vuole calcolare l'integrale su $[a,b]$ invece che sull'intervallo $[-1,1]$, si deve effettuare il cambio di variabile
+$$\int_a^b f(x)\,dx = \frac{b-a}{2} \int_{-1}^1 f\left(\frac{b-a}{2}x + \frac{a+b}{2}\right)\,dx $$
+ed applicando il metodo di Gauss si ottiene
+$$\int_a^b f(x)\,dx \approx \frac{b-a}{2} \sum_{i=1}^n w_i f\left(\frac{b-a}{2}x_i + \frac{a+b}{2}\right)$$
+I nodi ed i pesi per il polinomio di Legendre di quinto grado sono riportati in tabella:
+\begin{center}
+\scalebox{1.5}{
+\begin{tabular}{|c|c|}
+\hline
+$x_i$ & $w_i$ \\
+\hline\hline
+$0$ & $\frac{128}{255}$ \\
+\hline
+$\pm\tfrac13\sqrt{5-2\sqrt{10/7}}$ & $\tfrac{322+13\sqrt{70}}{900}$ \\
+\hline
+$\pm\tfrac13\sqrt{5+2\sqrt{10/7}}$ & $\tfrac{322-13\sqrt{70}}{900}$ \\
+\hline
+\end{tabular}
+}
+\end{center}
+
+\section{Integrazione Composta}
+Una tecnica utile a migliorare la precisione del calcolo dell'integrale numerico consiste nello spezzare l'intervallo d'integrazione in $n$ sottointervalli
+$$\int_a^b f(x)dx=\sum_{i=0}^{n-1}\int_{\frac{b-a}{n}i}^{\frac{b-a}{n}(i+1)}f(x)dx$$
+Dopodiché si applica uno dei metodi di quadratura numerica descritto ad ogni intervallino ed infine si somma ad ottenere il risutato voluto.
 
 \section{Monte Carlo}
 
