--- a/rel/ch1.tex
+++ b/rel/ch1.tex
@@ -40,7 +40,7 @@ Infine, se si vuole calcolare l'integrale su $[a,b]$ invece che sull'intervallo 
 $$\int_a^b f(x)\,dx = \frac{b-a}{2} \int_{-1}^1 f\left(\frac{b-a}{2}x + \frac{a+b}{2}\right)\,dx $$
 ed applicando il metodo di Gauss si ottiene
 $$\int_a^b f(x)\,dx \approx \frac{b-a}{2} \sum_{i=1}^n w_i f\left(\frac{b-a}{2}x_i + \frac{a+b}{2}\right)$$
-I nodi ed i pesi per il polinomio di Legendre di quinto grado sono riportati in tabella:
+I nodi ed i pesi per il polinomio di Legendre di quinto grado sono riportati in tabella:\\
 \begin{center}
 \scalebox{1.5}{
 \begin{tabular}{|c|c|}
@@ -65,10 +65,14 @@ Dopodiché si applica uno dei metodi di quadratura numerica descritto ad ogni in
 \section{Monte Carlo}
 
 \section{Esempi}
-\begin{figure}[h]
+Si dimostrano i metodi descritti nei paragrafi precedenti applicandoli al calcolo dell'integrale $$\int_1^2\log(1+x)dx$$
+In figura sono rappresentati gli errori rispetto al risultato analitico dei quattro metodi analizzati in funzione del numero di sottointervalli utilizzati per i metodi di quadratura numerica o del numero di iterazioni per il metodo Monte Carlo.
+\begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{integral}
 \caption{Errore calcolato}
 \label{fig:integral}
 \end{figure}
 
+Come si deduce dai grafici in figura, il metodo Monte Carlo risulta il più impreciso. con un errore che oscilla anche di due ordini di grandezza. Il Monte Carlo è infatti impiegato prevalentemente in quei casi in cui la mole di calcoli da svolgere è troppo grande per poter impiegare algoritmi di tipo deterministico.
+Dei metodi di quadratura invece l'algoritmo di Gauss-Legendre di grado $5$ è il più preciso, con errori dell'ordine di $10^{-16}$ anche per $n$ piccolo. Infine la precisione delle formule di Newton Cotes è bassa per $n$ piccolo ma aumenta all'aumentare di $n$ e del grado dell'approssimazione.
