--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -38,6 +38,7 @@
 \bibitem{due} I. Beichl, F. Sullivan. \textit{Computing in Science and Engineering}, 2000
 \bibitem{tre} M. Hjorth-Jensen. ``§9, Random walks and the Metropolis algorithm'', \textit{Computational Physics}, 2009
 \bibitem{quattro} Y. Saad. \textit{Iterative Methods for Sparse Linear Systems}, 2003
+\bibitem{cinque} C. Rebbi. \textit{Lecture Notes on Advanced Computing in Physics}, 1996
 \end{thebibliography} 
 
 \end{document}
