--- a/rel/ch3.tex
+++ b/rel/ch3.tex
@@ -1,6 +1,6 @@
-\chapter{\huge Metodo Runge-Kutta per Equazioni Differenziali Ordinare}
+\chapter{\huge Metodo Runge-Kutta}
 
-\textit{In analisi numerica i metodi Runge-Kutta sono una famiglia di metodi iterativi impliciti ed espliciti per la risuluzione approssimata di equazioni differenziali ordinarie. Il più comune di questi metodi è il cosidetto ``RK4'' o anche Runge-Kutta del quarto ordine.}
+\textit{In analisi numerica i metodi Runge-Kutta sono una famiglia di metodi iterativi impliciti ed espliciti per la risuluzione approssimata di equazioni differenziali ordinarie (ODE). Il più comune di questi metodi è il cosidetto ``RK4'' o anche Runge-Kutta del quarto ordine.}
 \\\\
 Sia dato il problema di Cauchy
 \begin{center}
