--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -1,17 +1,18 @@
 \documentclass[a4paper,11pt]{report}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+\usepackage[OT1]{fontenc}
 \usepackage[italian]{babel}
 \usepackage{fancyhdr}
 \usepackage{indentfirst}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{graphicx}
+\usepackage{vicent}
 
 \newenvironment{system}{\left\lbrace \begin{aligned}}{\end{aligned}\right.}
 
 \title{\bfseries{\Huge{Relazioni di Laboratorio di Fisica Computazionale}}}
-\author{\textit {Luca Cassia - [MAT. 728341]}}
+\author{\cursiveshape {Luca Cassia - [MAT. 728341]}}
 
 \date{Spring 2012}
 
@@ -39,6 +40,7 @@
 \bibitem{tre} M. Hjorth-Jensen. ``§9, Random walks and the Metropolis algorithm'', \textit{Computational Physics}, 2009
 \bibitem{quattro} Y. Saad. \textit{Iterative Methods for Sparse Linear Systems}, 2003
 \bibitem{cinque} C. Rebbi. \textit{Lecture Notes on Advanced Computing in Physics}, 1996
+\bibitem{sei} S. Weinzierl. \textit{Introduction to Monte Carlo methods}, 2000
 \end{thebibliography} 
 
 \end{document}
