--- a/rel/ch1.tex
+++ b/rel/ch1.tex
@@ -87,7 +87,7 @@ Il campionamento di importanza è efficace se si sceglie $p(x)$ tale che appross
 \section{Esempi}
 Si dimostrano i metodi descritti nei paragrafi precedenti applicandoli al calcolo dell'integrale $$\int_1^2\log(1+x)dx$$
 In figura sono rappresentati gli errori rispetto al risultato analitico dei quattro metodi analizzati in funzione del numero di sottointervalli utilizzati per i metodi di quadratura numerica o del numero di iterazioni per il metodo Monte Carlo.
-\begin{figure}[h!]
+\begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{integral}
 \caption{Errore calcolato}
