--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -8,6 +8,7 @@
 \usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage{vicent}
+\usepackage{float}
 
 \newenvironment{system}{\left\lbrace \begin{aligned}}{\end{aligned}\right.}
 
