--- a/rel/ch4.tex
+++ b/rel/ch4.tex
@@ -2,7 +2,7 @@
 
 \textit{Per sistemi di equazioni alle derivate parziali (PDE) esistono altri metodi oltre a quelli RK. In questa sezione si illustra e implementa il cosidetto metodo implicito per risolvere equazioni agli operatori lineari.}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{schrodinger}
 \caption{Scattering di un pacchetto gaussiano con una buca di potenziale}
